<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Vertretungsplan GAG</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="connection_error">Es konnte keine Verbindung zum Server hergestellt werden.</string>
    <string name="alert_dialog_ok">Neu starten</string>
    <string name="alert_dialog_cancel">Beenden</string>
    <string name="hour">Std</string>
    <string name="teacher">Vertr.</string>
    <string name="classes">Klasse</string>
    <string name="room">Raum</string>
    <string name="comment">Kommentar</string>
    <string name="subject">Fach</string>
    <string name="switch_plan">Plan wechseln</string>
    <string name="settings_data">Schuldaten</string>
    <string name="settings_class">Klasse</string>
    <string name="settings_subjects">Kurse</string>
    <string name="settings_add_subject">Kurs hinzufügen</string>
    <string name="settings_notifications">Für alle Einträge auf dem Vertretungsplan die zu deiner Klasse gehören eine Information senden</string>
    <string name="settings_safe">Speichern</string>

</resources>