<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_data"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_class"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/settings_classes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textNoSuggestions" >

                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_subjects"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:id="@+id/settings_subject_list"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <EditText
                    android:id="@+id/settings_subject"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textNoSuggestions" />
            </LinearLayout>

            <ImageButton
                android:id="@+id/settings_add_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/settings_add_subject"
                android:src="@android:drawable/ic_input_add" />
        </TableRow>
    </TableLayout>

    <CheckBox
        android:id="@+id/settings_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_notifications" />

    <Button
        android:id="@+id/settings_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_safe" />

</LinearLayout>